--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Pillow==6.1.0
 PyJWT==1.7.1
 python3-openid==3.1.0
 pytz==2019.2
+redis==3.3.8
 requests==2.22.0
 requests-oauthlib==1.2.0
 six==1.12.0
